# $Id: Makefile.am,v 1.14 2004-09-01 17:08:45 adam Exp $
noinst_HEADERS = bfile.h bset.h charmap.h d1_attset.h d1_map.h \
data1.h dfa.h dict.h direntz.h isam-codec.h isamb.h isamc.h isamg.h \
isams.h mfile.h passwddb.h recctrl.h \
rset.h set.h sortidx.h str.h zebra-lock.h zebramap.h zebrautl.h \
zebra_xpath.h 

SUBDIRS = idzebra
