# $Id: Makefile.am,v 1.15 2004-09-28 10:15:03 adam Exp $
noinst_HEADERS = bfile.h bset.h charmap.h d1_attset.h d1_map.h \
dict.h direntz.h isam-codec.h isamb.h isamc.h isamg.h \
isams.h mfile.h passwddb.h dfa.h zebra_xpath.h d1_absyn.h \
rset.h set.h sortidx.h str.h zebra-lock.h zebramap.h zebrautl.h

SUBDIRS = idzebra
